--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "prettier-watch:darwin:linux": "onchange 'src/**/*.ts' -- prettier --write {{changed}}",
         "prettier-watch:default": "onchange 'src/**/*.ts' -- prettier --write {{changed}}",
         "test": "jest",
-        "test:dev": "jest --watchAll"
+        "test:dev": "jest --watchAll",
+        "proto": "sh ./src/scripts/generateProto.sh"
     },
     "husky": {
         "hooks": {
@@ -44,6 +45,7 @@
         "nodemon": "^1.19.4",
         "onchange": "^6.1.1",
         "prettier": "^1.19.1",
+        "protoc": "^1.0.4",
         "rimraf": "^3.0.2",
         "run-script-os": "^1.1.6",
         "ts-node": "^8.10.2",
