--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "typescript": "^4.2.4"
     },
     "dependencies": {
+        "@cosmjs/stargate": "^0.25.0-alpha.2",
         "@grpc/grpc-js": "^1.2.12",
         "@grpc/proto-loader": "^0.5.6",
         "axios": "^0.21.1",
@@ -65,10 +66,10 @@
         "grpc": "^1.24.6",
         "jest": "^26.6.3",
         "protobufjs": "^6.10.2",
+        "protoc-gen-ts": "^0.3.6-rc1",
         "ripemd160": "^2.0.2",
         "secp256k1": "^4.0.2",
         "sha256": "^0.2.0",
-        "ts-jest": "^26.5.5",
-        "@cosmjs/stargate": "^0.25.0-alpha.2"
+        "ts-jest": "^26.5.5"
     }
 }
