KB-156 service typings

--- a/package.json
+++ b/package.json
@@ -41,6 +41,9 @@
         "eslint": "^6.8.0",
         "eslint-config-prettier": "^6.15.0",
         "eslint-plugin-prettier": "^3.4.0",
+        "grpc-tools": "^1.11.1",
+        "grpc-web": "^1.2.1",
+        "grpc_tools_node_protoc_ts": "^5.2.1",
         "husky": "^4.3.8",
         "nodemon": "^1.19.4",
         "onchange": "^6.1.1",
