--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "dependencies": {
         "@grpc/grpc-js": "^1.2.12",
         "@grpc/proto-loader": "^0.5.6",
+        "@improbable-eng/grpc-web": "^0.14.0",
         "axios": "^0.21.1",
         "base64-js": "^1.5.1",
         "bech32": "^2.0.0",
@@ -73,6 +74,8 @@
         "ripemd160": "^2.0.2",
         "secp256k1": "^4.0.2",
         "sha256": "^0.2.0",
+        "grpc-web": "^1.2.1",
+        "@cosmjs/stargate": "^0.25.2",
         "ts-jest": "^26.5.5"
     }
 }
