--- a/package.json
+++ b/package.json
@@ -32,10 +32,13 @@
     "devDependencies": {
         "@types/google-protobuf": "^3.15.0",
         "@types/jest": "^26.0.22",
+        "@types/libsodium-wrappers": "^0.7.9",
         "@types/node": "^12.20.10",
+        "@types/pbkdf2": "^3.1.0",
         "@types/ripemd160": "^2.0.0",
         "@types/secp256k1": "^4.0.2",
         "@types/sha256": "^0.2.0",
+        "@types/unorm": "^1.3.28",
         "@typescript-eslint/eslint-plugin": "^2.34.0",
         "@typescript-eslint/parser": "^2.34.0",
         "eslint": "^6.8.0",
@@ -57,6 +60,7 @@
         "typescript": "^4.2.4"
     },
     "dependencies": {
+        "@cosmjs/stargate": "^0.25.2",
         "@grpc/grpc-js": "^1.2.12",
         "@grpc/proto-loader": "^0.5.6",
         "@improbable-eng/grpc-web": "^0.14.0",
@@ -69,13 +73,15 @@
         "eslint-plugin-jest": "^24.3.5",
         "google-protobuf": "^3.15.8",
         "grpc": "^1.24.6",
+        "grpc-web": "^1.2.1",
         "jest": "^26.6.3",
+        "libsodium-wrappers": "^0.7.9",
+        "pbkdf2": "^3.1.2",
         "protobufjs": "^6.10.2",
         "ripemd160": "^2.0.2",
         "secp256k1": "^4.0.2",
         "sha256": "^0.2.0",
-        "grpc-web": "^1.2.1",
-        "@cosmjs/stargate": "^0.25.2",
-        "ts-jest": "^26.5.5"
+        "ts-jest": "^26.5.5",
+        "unorm": "^1.6.0"
     }
 }
