--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
         "ts-jest": "^26.5.5",
         "unorm": "^1.6.0",
         "uuid": "^8.3.2",
-        "web3-utils": "^1.3.6"
+        "web3-utils": "^1.3.6",
+        "@konstellation/cosmosjs": "^1.0.16"
     }
 }
