--- a/package.json
+++ b/package.json
@@ -108,6 +108,6 @@
         "unorm": "^1.6.0",
         "uuid": "^8.3.2",
         "web3-utils": "^1.3.6",
-        "@konstellation/cosmosjs": "^1.0.16"
+        "@knstl/cosmosjs": "^1.0.17"
     }
 }
