--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "@konstellation/celestial",
-    "version": "1.0.7",
+    "name": "@knstl/celestial",
+    "version": "1.0.8",
     "description": "Celestial: A Typescript Open Source Library for Konstellation Network",
     "main": "build/index.js",
     "types": "build/index.d.ts",
